force-app/main/default/objects/Vendor_Setting__mdt/Vendor_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Vendor Setting</label>
    <pluralLabel>Vendor Setting</pluralLabel>
</CustomObject>