force-app/main/default/objects/Vendor_Setting__mdt/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <inlineHelpText>Please enter values in comma separated format.</inlineHelpText>
    <label>Component Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>