force-app/main/default/objects/Vendor_Setting__mdt/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ViaSat</fullName>
                <default>true</default>
                <label>ViaSat</label>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Nextlink</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>WOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>