force-app/main/default/objects/Vendor_Setting__mdt/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>