force-app/main/default/objects/Vendor_Setting__mdt/fields/Work_Type_Long__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Long__c</fullName>
    <label>Work Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>